--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ sass:
 
 permalink: /posts/:title/
 texture:
-  title: Adam Denisov
-  tagline: Developer. Designer
+  title: Mr_Sir Blog
+  tagline: Developer
   date_format: "%b %-d, %Y"
   style: black
-  showNav: false
+  showNav: true
   showPicker: true
 
   # generate social links in footer
