--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ texture:
   date_format: "%b %-d, %Y"
   style: black
   showNav: true
-  showPicker: true
+  showPicker: false
 
   # generate social links in footer
   social_links:
