--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ texture:
   tagline: Developer
   date_format: "%b %-d, %Y"
   style: black
-  showNav: true
+  showNav: false
   showPicker: false
 
   # generate social links in footer
   social_links:
-    twitter: thelehhman
-    github:  thelehhman
-    linkedIn: in/thelehhman
+    # twitter: thelehhman
+    # github:  thelehhman
+    # linkedIn: in/thelehhman
     rss: rss
  
 
